examples/datalog/14_aggregations/36_sum_overflow.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_sum_large
Knowledge graph 'test_sum_large' created.
Switched to knowledge graph: test_sum_large
> .kg use test_sum_large
Switched to knowledge graph: test_sum_large
> +big_nums[(1000000000,), (2000000000,), (3000000000,)].
Inserted 3 fact(s) into 'big_nums'.
> +big_sum(<SUM:X>) :- big_nums(X).
Script error: Parse error: Invalid term: '<SUM:X>'
